--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
 <app-header></app-header>
+<app-hero></app-hero>
+<app-about></app-about>
+<app-skill></app-skill>
+<app-work></app-work>
+<app-contact></app-contact>
+<app-footer></app-footer>
