--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg bg-light fixed-top">
   <div class="container">
     <a class="navbar-brand fw-bold" href="#">Deenadayalan</a>
     <button
@@ -15,10 +15,10 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ms-auto fw-bold">
         <a class="nav-link active me-3" aria-current="page" href="#">Home</a>
-        <a class="nav-link me-3" href="#">About</a>
-        <a class="nav-link me-3" href="#">Services</a>
-        <a class="nav-link me-3">Work</a>
-        <a class="nav-link me-3">Contact</a>
+        <a class="nav-link me-3" href="#about">About</a>
+        <a class="nav-link me-3" href="#skill">Skills</a>
+        <a class="nav-link me-3" href="#work">Work</a>
+        <a class="nav-link me-3" href="#contact">Contact</a>
       </div>
     </div>
   </div>
